feat: icon cart hasNotify prop; hover effects

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -6,6 +6,9 @@
 
   --color-background-trans: rgba(237,237,237,.5);
 
+  --color-accent: #FF8D06;
+  --color-accent-secondary: #FFC24C;
+
   --color-font-primary: #00284F;
   --color-font-secondary: rgba(0,40,79,0.4);
 
